# ChangeLog for dev-util/bzr
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/Attic/ChangeLog,v 1.92 2009/05/02 10:10:37 pva Exp $

*bzr-1.14.1 (02 May 2009)

  02 May 2009; Peter Volkov <pva@gentoo.org> -bzr-1.14.ebuild,
  +bzr-1.14.1.ebuild:
  Version bump.

*bzr-1.14 (01 May 2009)
*bzr-1.13.2 (01 May 2009)

  01 May 2009; Peter Volkov <pva@gentoo.org> -bzr-1.13.1.ebuild,
  +bzr-1.13.2.ebuild, -bzr-1.14_rc2.ebuild, +bzr-1.14.ebuild:
  Version bump.

*bzr-1.14_rc2 (25 Apr 2009)

  25 Apr 2009; Peter Volkov <pva@gentoo.org> -bzr-1.14_rc1.ebuild,
  +bzr-1.14_rc2.ebuild:
  Version bump.

*bzr-1.14_rc1 (11 Apr 2009)

  11 Apr 2009; Peter Volkov <pva@gentoo.org> bzr-1.13.1.ebuild,
  +bzr-1.14_rc1.ebuild:
  Version bump.

*bzr-1.13.1 (25 Mar 2009)

  25 Mar 2009; Peter Volkov <pva@gentoo.org> -bzr-1.13.ebuild,
  +bzr-1.13.1.ebuild:
  Version bump.

  22 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing hawking as a maintainer since he was retired.

*bzr-1.13 (17 Mar 2009)

  17 Mar 2009; Peter Volkov <pva@gentoo.org> -bzr-1.13_rc1.ebuild,
  +bzr-1.13.ebuild:
  Version bump.

*bzr-1.13_rc1 (15 Mar 2009)

  15 Mar 2009; Peter Volkov <pva@gentoo.org> +bzr-1.13_rc1.ebuild:
  Version bump.

  20 Feb 2009; Christian Faulhammer <fauli@gentoo.org> bzr-1.12.ebuild:
  make USE=sftp default with EAPI=1

  20 Feb 2009; Christian Faulhammer <fauli@gentoo.org> bzr-1.12.ebuild:
  make Python 2.5 first choice so people get that pulled in in every case

*bzr-1.12 (14 Feb 2009)

  14 Feb 2009; Christian Faulhammer <fauli@gentoo.org> -bzr-1.12_rc1.ebuild,
  +bzr-1.12.ebuild:
  version bump

*bzr-1.12_rc1 (10 Feb 2009)

  10 Feb 2009; Peter Volkov <pva@gentoo.org> +bzr-1.12_rc1.ebuild:
  Version bump. Release candidates will be added hard masked.

  08 Feb 2009; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
  add myself as maintainer

*bzr-1.11 (20 Jan 2009)
