@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzrtools/Attic/bzrtools-1.13.0.ebuild,v 1.1 2009/03/15 06:39:41 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzrtools/Attic/bzrtools-1.13.0.ebuild,v 1.2 2009/05/25 17:30:14 fauli Exp $
 
 NEED_PYTHON=2.4
 inherit distutils versionator
@@ -11,7 +11,7 @@ SRC_URI="http://launchpad.net/bzrtools/stable/${PV}/+download/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~ia64 ~ppc ~sparc x86"
 IUSE=""
 
 DEPEND="=dev-util/bzr-$(get_version_component_range 1-2)*"
