@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/bzr
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/Attic/ChangeLog,v 1.92 2009/05/02 10:10:37 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/Attic/ChangeLog,v 1.93 2009/05/25 17:28:55 fauli Exp $
+
+  25 May 2009; Christian Faulhammer <fauli@gentoo.org> bzr-1.13.2.ebuild:
+  stable x86, bug 271130
 
 *bzr-1.14.1 (02 May 2009)
 
